--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.4.13",
     "lucide-react": "^0.263.1",
     "next": "13.4.13",
+    "next-cloudinary": "^4.18.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
